--- a/octofit-tracker/backend/requirements.txt
+++ b/octofit-tracker/backend/requirements.txt
@@ -1,8 +1,7 @@
+# Removed djongo and updated for pymongo usage
 # Requirements for OctoFit Tracker Backend
-Django==4.1
-# Updated to version 4.1
+Django==4.2
 djangorestframework==3.16.0
-djongo==1.2.31
 pymongo==4.12.0
 asgiref==3.8.1
 sqlparse==0.5.3
